hw-06-auth/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw06
  labels:
    app: hw06-auth
