hw-06-auth/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw06-auth
  namespace: hw06
  labels:
    app: hw06-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw06-auth
  template:
    metadata:
      labels:
        app: hw06-auth
    spec:
      containers:
        - name: hw06-auth
          image: tobantal/hw06-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
