hw-06-auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw06-auth
  namespace: hw06
  labels:
    app: hw06-auth
spec:
  selector:
    app: hw06-auth
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
