hw-06-auth/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw06-ingress
  namespace: hw06
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/tobolkin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hw06-auth
                port:
                  number: 8000
